Add JDK 11 version